build.log
cargo :     Checking 
flowbot-rs v0.1.0 
(C:\Users\AMAN ANU\De
sktop\amxcodes\nanobo
t\nanobot-rs-clean)
At line:1 char:1
+ cargo check 2>&1 | 
Out-File -Encoding 
utf8 build.log
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo   
           : NotSpe  
  cified: (    Che   
 cking fl...nobot    
-rs-clean):Strin    
g) [], RemoteExc    
eption
    + FullyQualified 
   ErrorId : Native  
  CommandError
 
warning: unused 
imports: `ToolCall` 
and `ToolResult`
 --> src\antigravity.
rs:7:32
  |
7 | use rig::completi
on::message::{ToolCal
l, ToolResult, 
ToolResultContent, 
UserContent};
  |                  
              
^^^^^^^^  ^^^^^^^^^^
  |
  = note: `#[warn(unu
sed_imports)]` on by 
default

warning: unused 
import: `crate::confi
g::OAuthTokens`
  --> src\antigravity
.rs:10:5
   |
10 | use crate::confi
g::OAuthTokens;
   |     ^^^^^^^^^^^^
^^^^^^^^^^^^^^

warning: unused 
import: `crate::oauth
::OAuthFlow`
  --> src\antigravity
.rs:11:5
   |
11 | use crate::oauth
::OAuthFlow;
   |     ^^^^^^^^^^^^
^^^^^^^^^^^

warning: unused 
imports: `Antigravity
CompletionModel` and 
`AntigravityStreaming
Response`
 --> 
src\agent\mod.rs:3:45
  |
3 | use crate::antigr
avity::{AntigravityCl
ient, AntigravityComp
letionModel, Antigrav
ityStreamingResponse}
;
  |                  
                     
      ^^^^^^^^^^^^^^^
^^^^^^^^^^^  ^^^^^^^^
^^^^^^^^^^^^^^^^^^^^

warning: unused 
imports: 
`AssistantContent`, 
`ToolCall`, 
`ToolFunction`, 
`ToolResultContent`, 
and `ToolResult`
 --> 
src\agent\mod.rs:6:45
  |
6 | use rig::completi
on::message::{UserCon
tent, 
AssistantContent, 
ToolCall, 
ToolResult, 
ToolResultContent, 
Text, ToolFunction};
  |                  
                     
      
^^^^^^^^^^^^^^^^  
^^^^^^^^  ^^^^^^^^^^ 
 ^^^^^^^^^^^^^^^^^   
     ^^^^^^^^^^^^

warning: unused 
import: `crate::tools
::executor::execute_t
ool`
  --> 
src\agent\mod.rs:11:5
   |
11 | use crate::tools
::executor::execute_t
ool;
   |     ^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^
^^^

warning: unused 
import: `uuid::Uuid`
  --> 
src\agent\mod.rs:13:5
   |
13 | use uuid::Uuid;
   |     ^^^^^^^^^^

warning: unused 
imports: 
`Deserialize` and 
`Serialize`
  --> src\agent\mod.r
s:14:13
   |
14 | use 
serde::{Deserialize, 
Serialize};
   |             
^^^^^^^^^^^  
^^^^^^^^^

warning: unused 
import: 
`std::path::Path`
 --> src\setup\templa
tes.rs:1:5
  |
1 | use 
std::path::Path;
  |     
^^^^^^^^^^^^^^^

warning: unused 
import: `Child`
 --> src\tools\proces
s.rs:4:31
  |
4 | use tokio::proces
s::{Command, Child};
  |                  
             ^^^^^

warning: unused 
import: `SessionType`
 --> src\tools\sessio
ns.rs:4:66
  |
4 | use crate::gatewa
y::agent_manager::{Ag
entManager, 
CleanupPolicy, 
SessionType};
  |                  
                     
                     
      ^^^^^^^^^^^

warning: unused 
import: `Path`
 --> src\persistence.
rs:6:17
  |
6 | use 
std::path::{Path, 
PathBuf};
  |                 
^^^^

warning: unused 
import: 
`std::sync::Mutex`
 --> src\persistence.
rs:7:5
  |
7 | use 
std::sync::Mutex;
  |     
^^^^^^^^^^^^^^^^

warning: unused 
import: `once_cell::s
ync::Lazy`
 --> src\persistence.
rs:8:5
  |
8 | use once_cell::sy
nc::Lazy;
  |     
^^^^^^^^^^^^^^^^^^^^^

warning: unused 
import: `post`
 --> src\gateway\mod.
rs:7:20
  |
7 |     
routing::{get, post},
  |                  
  ^^^^

warning: unused 
import: `uuid::Uuid`
  --> src\gateway\mod
.rs:16:5
   |
16 | use uuid::Uuid;
   |     ^^^^^^^^^^

warning: unused 
import: 
`std::sync::Arc`
 --> 
src\telegram.rs:5:5
  |
5 | use 
std::sync::Arc;
  |     
^^^^^^^^^^^^^^

warning: unused 
import: `colored::*`
 --> 
src\doctor.rs:4:5
  |
4 | use colored::*; 
// We'll add this 
for nice output, or 
use direct ANSI 
codes if keeping 
deps minimal
  |     ^^^^^^^^^^

warning: unused 
import: 
`anyhow::Result`
 --> 
src\sessions.rs:2:5
  |
2 | use 
anyhow::Result;
  |     
^^^^^^^^^^^^^^

warning: unused 
variable: `api_key`
   --> src\antigravit
y.rs:480:5
    |
480 |     api_key: 
&Option<String>,
    |     ^^^^^^^ 
help: if this is 
intentional, prefix 
it with an 
underscore: 
`_api_key`
    |
    = note: `#[warn(u
nused_variables)]` 
on by default

error[E0308]: 
mismatched types
   --> src\agent\mod.
rs:117:39
    |
117 |                
 AgentProvider::OpenA
I(client.completion_m
odel("google/gemini-2
.0-flash-001"))
    |                
 --------------------
- ^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^ 
expected 
`CompletionModel`, 
found `ResponsesCompl
etionModel<_>`
    |                
 |
    |                
 arguments to this 
enum variant are 
incorrect
    |
    = note: expected 
struct `rig::provider
s::openai::Completion
Model`
               found 
struct `ResponsesComp
letionModel<_>`
note: tuple variant 
defined here
   --> 
src\agent\mod.rs:43:5
    |
 43 |     OpenAI(open
ai::CompletionModel),
 
    |     ^^^^^^

error[E0308]: 
mismatched types
   --> src\agent\mod.
rs:125:40
    |
125 |                
  AgentProvider::Open
AI(client.completion_
model("gpt-4o"))
    |                
  -------------------
-- ^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^ 
expected 
`CompletionModel`, 
found `ResponsesCompl
etionModel<_>`
    |                
  |
    |                
  arguments to this 
enum variant are 
incorrect
    |
    = note: expected 
struct `rig::provider
s::openai::Completion
Model`
               found 
struct `ResponsesComp
letionModel<_>`
note: tuple variant 
defined here
   --> 
src\agent\mod.rs:43:5
    |
 43 |     OpenAI(open
ai::CompletionModel),
 
    |     ^^^^^^

warning: unused 
variable: 
`noise_selector`
  --> src\tools\fetch
.rs:51:13
   |
51 |         let 
noise_selector = Sele
ctor::parse("script, 
style, nav, footer, 
iframe, svg, 
noscript").unwrap();
   |             
^^^^^^^^^^^^^^ help: 
if this is 
intentional, prefix 
it with an 
underscore: 
`_noise_selector`

warning: unused 
variable: `label`
   --> src\gateway\ag
ent_manager.rs:112:9
    |
112 |         label: 
Option<String>,
    |         ^^^^^ 
help: if this is 
intentional, prefix 
it with an 
underscore: `_label`

warning: variable 
does not need to be 
mutable
  --> src\gateway\mod
.rs:73:9
   |
73 |     let mut 
send_task = 
tokio::spawn(async 
move {
   |         
----^^^^^^^^^
   |         |
   |         help: 
remove this `mut`
   |
   = note: `#[warn(un
used_mut)]` on by 
default

warning: variable 
does not need to be 
mutable
   --> src\telegram.r
s:224:13
    |
224 |         let 
mut current_prompt = 
message.to_string();
    |             
----^^^^^^^^^^^^^^
    |             |
    |             
help: remove this 
`mut`

For more information 
about this error, 
try `rustc --explain 
E0308`.
warning: 
`flowbot-rs` (lib) 
generated 24 warnings
error: could not 
compile `flowbot-rs` 
(lib) due to 2 
previous errors; 24 
warnings emitted
